--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,8 @@ html{
 .btn h5{
     letter-spacing: 1px;
     color:   hsl(230, 11%, 40%);
+    /* letter-spacing: 2px; */
+    margin-right: 20px;
 }
 .power{
    
@@ -110,4 +112,6 @@ html{
 .demo h5{
     margin-top: 10px;
     color: hsl(230, 11%, 40%);
-}
+    margin-right: 20px;
+    
+} 
