--- a/css/styles.css
+++ b/css/styles.css
@@ -66,20 +66,21 @@ html{
     width: 50px;
     height: 20px;
     border-width: 0;
-    
+    float: left;
+    margin-right: 20px;
 
 }
 .btn{
-    margin-right: 30px;
-    display: flex;
-    justify-content: space-between;
+    margin-right: 20px;
+    /* display: flex; */
+    /* justify-content: space-between; */
     margin-top: 60px;
 }
 .btn h5{
-    letter-spacing: 1px;
     color:   hsl(230, 11%, 40%);
-    letter-spacing: 4px; 
-    margin-right: 20px;
+    letter-spacing: 3px; 
+    /* margin-right: -10px; */
+     margin-left: 20px; 
 }
 .power{
    
@@ -94,8 +95,8 @@ html{
     text-align: left;
 }
 .demo{
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-between; */
     margin: 20px 30px 40px 20px;
 }
 .demo button{
@@ -106,11 +107,15 @@ html{
     text-align: center;
     border-radius: 5px;
     width: 120px;
+    float: left;
+    margin-right: 20px;
+    
 }
 .demo h5{
     margin-top: 10px;
     color: hsl(230, 11%, 40%);
     margin-right: 10px;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
+    padding-top: 10px;
     
 } 
