--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,44 @@ html{
     padding-top: 10px;
     
 } 
+ @media screen and (min-width:1024px){
+     
+    .image{
+        overflow:hidden;
+    }
+    .image img{
+        width: 60%;
+        height: 100%;
+        margin-left: 50%;
+        object-fit: cover;
+        object-position:0px 0px 0px -30px ;
+    }
+    .left{
+        margin-top: -35%;
+        margin-left: 10%;
+        width: 40%;
+        padding: 40px;
+    }
+    .icon{
+        margin-left: 12%;
+    }
+    .power h2{
+        font-size: 30px;
+        font-weight: bolder;
+        letter-spacing: 2px;
+        padding-top: 20px;
+    }
+    .power h5{
+        margin-top: 20px;
+        font-size:15px ;
+        padding-top: 20px;
+    }
+    .btn{
+        padding-top: 20px;
+    }
+        
+    }
+    .demo h5{
+        padding-bottom: -10px;
+    }
+}  
